Update from simulation to numerical-simulation. Not yet working

--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -5,7 +5,7 @@ config:
 modules:
   - astro
   - interface
-  - simulation
+  - numerical-simulation
 #  - plotting      # [py]
 #  - cli           # [py]
 #  - util          # [py]
