Correctec numerical_simulation spelling

--- a/docstrings/__package__.yaml
+++ b/docstrings/__package__.yaml
@@ -13,8 +13,7 @@ summary: |
 modules:
   - astro
   - interface
-  - numerical-simulation
-  - simulation
+  - numerical_simulation
   - plotting      # [py]
 #  - cli           # [py]
   - util          # [py]
