Updates to docs for element and frame conversions

--- a/docstrings/astro/__package__.yaml
+++ b/docstrings/astro/__package__.yaml
@@ -2,3 +2,4 @@ description: "Provides diverse low-level to support  astrodynamics calculations.
 
 modules:
   - frame_conversion
+  - element_conversion
