--- a/docstrings/simulation/propagation_setup/integrator.yaml
+++ b/docstrings/simulation/propagation_setup/integrator.yaml
@@ -4,11 +4,6 @@ notes: "None"
 # The structure of this file follows the order of expose_integrator_setup.cpp (tudatpy) and
 # includes content for createNumericalIntegrator.h and bulirschStoerVariableStepsizeIntegrator.h (tudat)
 
-# Enums
-# TODO
-#       py::enum_<tni::AvailableIntegrators>
-#       py::enum_<tni::RungeKuttaCoefficients::CoefficientSets>
-#       py::enum_<tni::ExtrapolationMethodStepSequences>
 
 classes:
 
@@ -226,192 +221,196 @@ functions:
 
 
   # Runge Kutta variable step size with scalar tolerances (cpp)
-  - name: rungeKuttaVariableStepSettingsScalarTolerances
-    short_summary: "Creates the settings for the Runge-Kutta variable step size integrator with scalar tolerances." # [cpp]
-    extended_summary: | # [cpp]
-      Factory function to create settings for the Runge-Kutta variable step size integrator with scalar tolerances. # [cpp]
-      For this integrator, the step size is varied based on the tolerances and safety factor provided. # [cpp]
-      The tolerance is composed of an absolute and a relative part. # [cpp]
-      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum). # [cpp]
+  - name: runge_kutta_variable_step_size_vector_tolerances # [py]
+  - name: rungeKuttaVariableStepSettingsScalarTolerances # [cpp]
+    short_summary: "Creates the settings for the Runge-Kutta variable step size integrator with scalar tolerances."
+    extended_summary: |
+      Factory function to create settings for the Runge-Kutta variable step size integrator with scalar tolerances.
+      For this integrator, the step size is varied based on the tolerances and safety factor provided.
+      The tolerance is composed of an absolute and a relative part.
+      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum).
 
-    parameters: # [cpp]
-      - name: initialTime # [cpp]
-        type: double # [cpp]
-        description: Start time (independent variable) of numerical integration. # [cpp]
-
-      - name: initialTimeStep # [cpp]
-        type: double # [cpp]
-        description: Initial time step to be used. # [cpp]
-
-      - name: coefficientSet # [cpp]
-        type: RungeKuttaCoefficients::CoefficientSets # [cpp]
-        description: Coefficient set (Butcher's tableau) to be used in the integration.  # [cpp]
-
-      - name: minimumStepSize # [cpp]
-        type: double # [cpp]
-        description: Minimum time step to be used during the integration. # [cpp]
-
-      - name: maximumStepSize # [cpp]
-        type: double # [cpp]
-        description: Maximum time step to be used during the integration. # [cpp]
-
-      - name: relativeErrorTolerance # [cpp]
-        type: double # [cpp]
-        description: Relative scalar tolerance to adjust the time step. # [cpp]
-
-      - name: absoluteErrorTolerance # [cpp]
-        type: double # [cpp]
-        description: Absolute scalar tolerance to adjust the time step. # [cpp]
-
-      - name: saveFrequency # [cpp]
-        type: int, default=1 # [cpp]
-        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step). # [cpp]
-
-      - name: assessTerminationOnMinorSteps # [cpp]
-        type: bool, default=false # [cpp]
-        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false). # [cpp]
-
-      - name: safetyFactorForNextStepSize # [cpp]
-        type: double, default=0.8 # [cpp]
-        description: Safety factor used in the step size control. # [cpp]
-
-      - name: maximumFactorIncreaseForNextStepSize # [cpp]
-        type: double, default=4.0 # [cpp]
-        description: Maximum increase between consecutive time steps, expressed as the factor between new and old step size. # [cpp]
-
-      - name: minimumFactorDecreaseForNextStepSize # [cpp]
-        type: double, default=0.1 # [cpp]
-        description: Minimum increase between consecutive time steps, expressed as the factor between new and old step size. # [cpp]
-
-    returns: # [cpp]
-        type: RungeKuttaVariableStepSizeSettingsScalarTolerances # [cpp]
-        description: RungeKuttaVariableStepSizeSettingsScalarTolerances object. # [cpp]
-
-
-  # Runge Kutta variable step size with vector tolerances (cpp)
-  - name: rungeKuttaVariableStepSettingsVectorTolerances
-    short_summary: "Creates the settings for the Runge-Kutta variable step size integrator with vector tolerances." # [cpp]
-    extended_summary: | # [cpp]
-      Factory function to create settings for the Runge-Kutta variable step size integrator with vector tolerances. # [cpp]
-      For this integrator, the step size is varied based on the tolerances and safety factor provided. # [cpp]
-      The tolerance is composed of an absolute and a relative part. # [cpp]
-      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum). # [cpp]
-
-    parameters: # [cpp]
-      - name: initialTime # [cpp]
-        type: double # [cpp]
-        description: Start time (independent variable) of numerical integration. # [cpp]
-
-      - name: initialTimeStep # [cpp]
-        type: double # [cpp]
-        description: Initial time step to be used. # [cpp]
-
-      - name: coefficientSet # [cpp]
-        type: RungeKuttaCoefficients::CoefficientSets # [cpp]
-        description: Coefficient set (Butcher's tableau) to be used in the integration.  # [cpp]
-
-      - name: minimumStepSize # [cpp]
-        type: double # [cpp]
-        description: Minimum time step to be used during the integration. # [cpp]
-
-      - name: maximumStepSize # [cpp]
-        type: double # [cpp]
-        description: Maximum time step to be used during the integration. # [cpp]
-
-      - name: relativeErrorTolerance # [cpp]
-        type: Eigen::Matrix # [cpp]
-        description: Relative vector tolerance to adjust the time step. # [cpp]
-
-      - name: absoluteErrorTolerance # [cpp]
-        type: Eigen::Matrix # [cpp]
-        description: Absolute vector tolerance to adjust the time step. # [cpp]
-
-      - name: saveFrequency # [cpp]
-        type: int, default=1 # [cpp]
-        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step). # [cpp]
-
-      - name: assessTerminationOnMinorSteps # [cpp]
-        type: bool, default=false # [cpp]
-        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false). # [cpp]
-
-      - name: safetyFactorForNextStepSize # [cpp]
-        type: double, default=0.8 # [cpp]
-        description: Safety factor used in the step size control. # [cpp]
-
-      - name: maximumFactorIncreaseForNextStepSize # [cpp]
-        type: double, default=4.0 # [cpp]
-        description: Maximum increase between consecutive time steps, expressed as the factor between new and old step size. # [cpp]
-
-      - name: minimumFactorDecreaseForNextStepSize # [cpp]
-        type: double, default=0.1 # [cpp]
-        description: Minimum increase between consecutive time steps, expressed as the factor between new and old step size. # [cpp]
-
-    returns: # [cpp]
-        type: RungeKuttaVariableStepSizeSettingsVectorTolerances # [cpp]
-        description: RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [cpp]
-
-
-  # Runge Kutta variable step size (py)
-  - name: runge_kutta_variable_step_size # [py]
-    short_summary: "Creates the settings for the Runge-Kutta variable step size integrator." # [py]
-    extended_summary: | # [py]
-      Factory function to create settings for the Runge-Kutta variable step size integrator with vector tolerances. # [py]
-      For this integrator, the step size is varied based on the tolerances and safety factor provided. # [py]
-      The tolerance can be either scalar or vector; it is composed of an absolute and a relative part. # [py]
-      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum). # [py]
-
-    parameters: # [py]
+    parameters:
       - name: initial_time # [py]
         type: float # [py]
-        description: Start time (independent variable) of numerical integration. # [py]
+      - name: initialTime # [cpp]
+        type: double # [cpp]
+        description: Start time (independent variable) of numerical integration. # [cpp]
 
       - name: initial_time_step # [py]
         type: float # [py]
-        description: Initial time step to be used. # [py]
+      - name: initialTimeStep # [cpp]
+        type: double # [cpp]
+        description: "Initial time step to be used."
 
       - name: coefficient_set # [py]
-        type: RungeKuttaCoefficients::CoefficientSets # [py]
-        description: Coefficient set (Butcher's tableau) to be used in the integration.  # [py]
+        type: RKCoefficientSets # [py]
+      - name: coefficientSet # [cpp]
+        type: RungeKuttaCoefficients::CoefficientSets # [cpp]
+        description: "Coefficient set (Butcher's tableau) to be used in the integration."
 
       - name: minimum_step_size # [py]
         type: float # [py]
-        description: Minimum time step to be used during the integration. # [py]
+      - name: minimumStepSize # [cpp]
+        type: double # [cpp]
+        description: "Minimum time step to be used during the integration."
 
       - name: maximum_step_size # [py]
         type: float # [py]
-        description: Maximum time step to be used during the integration. # [py]
+      - name: maximumStepSize # [cpp]
+        type: double # [cpp]
+        description: "Maximum time step to be used during the integration."
 
       - name: relative_error_tolerance # [py]
-        type: float or np.ndarray # [py]
-        description: Relative vector tolerance to adjust the time step. # [py]
+        type: numpy.ndarray[numpy.float64[m, n]] # [py]
+      - name: relativeErrorTolerance # [cpp]
+        type: Eigen::Matrix # [cpp]
+        description: "Relative vector tolerance to adjust the time step."
 
       - name: absolute_error_tolerance # [py]
-        type: float or np.ndarray # [py]
-        description: Absolute vector tolerance to adjust the time step. # [py]
+        type: numpy.ndarray[numpy.float64[m, n]] # [py]
+      - name: absoluteErrorTolerance # [cpp]
+        type: Eigen::Matrix # [cpp]
+        description: "Absolute vector tolerance to adjust the time step."
 
       - name: save_frequency # [py]
         type: int, default=1 # [py]
-        description: Frequency at which to save the numerical integrated states (expressed per unit integration time step, with n = saveFrequency, so n = 1 means that the state is saved once per integration step). # [py]
+      - name: saveFrequency # [cpp]
+        type: int, default=1 # [cpp]
+        description: |
+          Frequency at which to save the numerical integrated states (expressed per unit integration time step,
+          with n = saveFrequency, so n = 1 means that the state is saved once per integration step).
 
       - name: assess_termination_on_minor_steps # [py]
         type: bool, default=false # [py]
-        description: Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the integrator (true) or only at the end of each integration step (false). # [py]
+      - name: assessTerminationOnMinorSteps # [cpp]
+        type: bool, default=false # [cpp]
+        description: |
+          Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the
+          integrator (true) or only at the end of each integration step (false).
 
       - name: safety_factor # [py]
         type: float, default=0.8 # [py]
-        description: Safety factor used in the step size control. # [py]
+      - name: safetyFactorForNextStepSize # [cpp]
+        type: double, default=0.8 # [cpp]
+        description: "Safety factor used in the step size control."
 
       - name: maximum_factor_increase # [py]
         type: float, default=4.0 # [py]
-        description: Maximum increase between consecutive time steps, expressed as the factor between new and old step size. # [py]
+      - name: maximumFactorIncreaseForNextStepSize # [cpp]
+        type: double, default=4.0 # [cpp]
+        description: |
+          Maximum increase between consecutive time steps, expressed as the factor between new and old step size.
 
       - name: minimum_factor_increase # [py]
         type: float, default=0.1 # [py]
-        description: Minimum increase between consecutive time steps, expressed as the factor between new and old step size. # [py]
+      - name: minimumFactorDecreaseForNextStepSize # [cpp]
+        type: double, default=0.1 # [cpp]
+        description: |
+          Minimum increase between consecutive time steps, expressed as the factor between new and old step size.
 
-    returns: # [py]
-        type: RungeKuttaVariableStepSizeSettingsScalarTolerances or RungeKuttaVariableStepSizeSettingsVectorTolerances # [py]
-        description: RungeKuttaVariableStepSizeSettingsScalarTolerances or RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [py]
+    returns:
+      - type: RungeKuttaVariableStepSettingsScalarTolerances # [py]
+        description: RungeKuttaVariableStepSettingsScalarTolerances object. # [py]
+      - type: RungeKuttaVariableStepSettingsScalarTolerances # [cpp]
+        description: RungeKuttaVariableStepSettingsScalarTolerances object. # [cpp]
+
+
+
+  # Runge Kutta variable step size with vector tolerances
+  - name: runge_kutta_variable_step_size_vector_tolerances # [py]
+  - name: rungeKuttaVariableStepSettingsVectorTolerances # [cpp]
+    short_summary: "Creates the settings for the Runge-Kutta variable step size integrator with vector tolerances."
+    extended_summary: |
+      Factory function to create settings for the Runge-Kutta variable step size integrator with vector tolerances.
+      For this integrator, the step size is varied based on the tolerances and safety factor provided.
+      The tolerance is composed of an absolute and a relative part.
+      Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum).
+
+    parameters:
+      - name: initial_time # [py]
+        type: float # [py]
+      - name: initialTime # [cpp]
+        type: double # [cpp]
+        description: "Start time (independent variable) of numerical integration."
+
+      - name: initial_time_step # [py]
+        type: float # [py]
+      - name: initialTimeStep # [cpp]
+        type: double # [cpp]
+        description: "Initial time step to be used."
+
+      - name: coefficient_set # [py]
+        type: RKCoefficientSets # [py]
+      - name: coefficientSet # [cpp]
+        type: RungeKuttaCoefficients::CoefficientSets # [cpp]
+        description: "Coefficient set (Butcher's tableau) to be used in the integration."
+
+      - name: minimum_step_size # [py]
+        type: float # [py]
+      - name: minimumStepSize # [cpp]
+        type: double # [cpp]
+        description: "Minimum time step to be used during the integration."
+
+      - name: maximum_step_size # [py]
+        type: float # [py]
+      - name: maximumStepSize # [cpp]
+        type: double # [cpp]
+        description: "Maximum time step to be used during the integration."
+
+      - name: relative_error_tolerance # [py]
+        type: numpy.ndarray[numpy.float64[m, n]] # [py]
+      - name: relativeErrorTolerance # [cpp]
+        type: Eigen::Matrix # [cpp]
+        description: "Relative vector tolerance to adjust the time step."
+
+      - name: absolute_error_tolerance # [py]
+        type: numpy.ndarray[numpy.float64[m, n]] # [py]
+      - name: absoluteErrorTolerance # [cpp]
+        type: Eigen::Matrix # [cpp]
+        description: "Absolute vector tolerance to adjust the time step."
+
+      - name: save_frequency # [py]
+        type: int, default=1 # [py]
+      - name: saveFrequency # [cpp]
+        type: int, default=1 # [cpp]
+        description: |
+          Frequency at which to save the numerical integrated states (expressed per unit integration time step,
+          with n = saveFrequency, so n = 1 means that the state is saved once per integration step).
+
+      - name: assess_termination_on_minor_steps # [py]
+        type: bool, default=false # [py]
+      - name: assessTerminationOnMinorSteps # [cpp]
+        type: bool, default=false # [cpp]
+        description: |
+          Whether the propagation termination conditions should be evaluated during the intermediate sub-steps of the
+          integrator (true) or only at the end of each integration step (false).
+
+      - name: safety_factor # [py]
+        type: float, default=0.8 # [py]
+      - name: safetyFactorForNextStepSize # [cpp]
+        type: double, default=0.8 # [cpp]
+        description: "Safety factor used in the step size control."
+
+      - name: maximum_factor_increase # [py]
+        type: float, default=4.0 # [py]
+      - name: maximumFactorIncreaseForNextStepSize # [cpp]
+        type: double, default=4.0 # [cpp]
+        description: |
+          Maximum increase between consecutive time steps, expressed as the factor between new and old step size.
+
+      - name: minimum_factor_increase # [py]
+        type: float, default=0.1 # [py]
+      - name: minimumFactorDecreaseForNextStepSize # [cpp]
+        type: double, default=0.1 # [cpp]
+        description: |
+          Minimum increase between consecutive time steps, expressed as the factor between new and old step size.
+
+    returns:
+      - type: RungeKuttaVariableStepSizeSettingsVectorTolerances # [py]
+        description: RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [py]
+      - type: RungeKuttaVariableStepSizeSettingsVectorTolerances # [cpp]
+        description: RungeKuttaVariableStepSizeSettingsVectorTolerances object. # [cpp]
 
 
   # Bulirsch-Stoer integrator
