complete docstring work on atmosphere submodule

--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -2,11 +2,11 @@ description: "None."
 
 modules:
   - aerodynamic_coefficient
-# - atmosphere
+  - atmosphere
   - ephemeris
   - gravity_field
 # - gravity_field_variation
-# - radiation_pressure
+  - radiation_pressure
   - rotation_model
   - shape
 
